--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 PORT=8080
 API_KEY=019b6eb6-07bc-7edf-b3a0-b9cd8dfaa5bf
+
+POSTGRES_DB=gin_user_management_development
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_SSLMODE=disable
