implement create user endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 PORT=8080
 API_KEY=019b6eb6-07bc-7edf-b3a0-b9cd8dfaa5bf
 
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gin_user_management_development?sslmode=disable
 POSTGRES_DB=gin_user_management_development
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_SSLMODE=disable
+
+MIGRATION_DIR=internal/db/migrations
+POSTGRES_DB_BACKUP=gin_user_management_development_backup.sql
