--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ POSTGRES_SSLMODE=disable
 
 MIGRATION_DIR=internal/db/migrations
 POSTGRES_DB_BACKUP=gin_user_management_development_backup.sql
+
+DEFAULT_PAGE_SIZE=20
+MAX_PAGE_SIZE=100
