add redis docker service with custom redis.conf

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 PORT=8080
 API_KEY=019b6eb6-07bc-7edf-b3a0-b9cd8dfaa5bf
 
+DEFAULT_PAGE_SIZE=20
+MAX_PAGE_SIZE=100
+
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/gin_user_management_development?sslmode=disable
 POSTGRES_DB=gin_user_management_development
 POSTGRES_HOST=localhost
@@ -12,5 +15,4 @@ POSTGRES_SSLMODE=disable
 MIGRATION_DIR=internal/db/migrations
 POSTGRES_DB_BACKUP=gin_user_management_development_backup.sql
 
-DEFAULT_PAGE_SIZE=20
-MAX_PAGE_SIZE=100
+REDIS_URL=localhost:6379/0
