connect to Redis & define get/set operations

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,7 @@ MIGRATION_DIR=internal/db/migrations
 POSTGRES_DB_BACKUP=gin_user_management_development_backup.sql
 
 REDIS_URL=localhost:6379/0
+REDIS_ADDR=localhost:6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DB=0
