--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -10,6 +10,11 @@ services:
       - "${POSTGRES_PORT}:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   redis:
     image: redis:8.4.0-alpine
