--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -68,7 +68,7 @@ sql:
             go_type: "float64"
             nullable: true
           - db_type: "numeric"
-            go_type: "float64" # Dùng string nếu cần độ chính xác cao
+            go_type: "float64"
 
           # ====== Time and Date ======
           - db_type: "timestamptz"
